<resources>
    <string name="common_back">返回</string>
    <string name="common_personal_data">个人资料</string>
    <string name="common_networkIsDisconnection_retryPlease">当前网络不可用，请稍候再试。</string>
    <string name="common_networkConnection_timeout">连接服务器超时！</string>
    <string name="common_loading">正在加载&#8230;</string>
    <string name="common_date_yesterday">昨天</string>
    <string name="crowdApplicantDetailActivity_additional_msg">附加消息: </string>
    <string name="crowdApplicantDetailActivity_nothing">无</string>
    <string name="messageAuthenticationActivity_message_youBecomeFriend">你们已成为了好友</string>
    <string name="messageAuthenticationActivity_message_refuseYourFriendRequests">拒绝了你的好友申请</string>
    <string name="messageAuthenticationActivity_message_waitingForOtherAuthentication">等待对方验证</string>
    <string name="messageAuthenticationActivity_message_refused">已拒绝</string>
    <string name="messageAuthenticationActivity_message_allowed">已同意</string>
    <string name="messageAuthenticationActivity_message_verification">好友验证</string>
    <string name="messageAuthenticationActivity_message_addedYouAsFriend">已添加您为好友</string>
    <string name="messageAuthenticationActivity_message_group_verification">群验证</string>
    <string name="contactDetail_titlebar_title_text">@string/common_personal_data</string>
    <string name="contactDetail_titlebar_title_text1">好友申请</string>
    <string name="contactDetail_titlebar_title_text2">验证通知</string>
    <string name="contactDetail_AuthenticationState_allowed_apply">已同意该申请</string>
    <string name="contactDetail_AuthenticationState_refused_apply">已拒绝该申请</string>
    <string name="contactDetail_AuthenticationState_refused_your_apply">拒绝你的好友申请</string>
    <string name="contactDetail_toast_text_notOnlineCanNotVoice">对方目前不在线，无法语音通话</string>
    <string name="friendManagementActivity_titlebar_right_text">完成</string>
    <string name="friendManagementActivity_titlebar_left_text">@string/common_back</string>
    <string name="friendManagementActivity_titlebar_right_text1">发送</string>
    <string name="friendManagementActivity_titlebar_left_text1">@string/common_personal_data</string>
    <string name="friendManagementActivity_titlebar_left_text2">身份验证</string>
    <string name="friendManagementActivity_toast_text_applySentSuccess">您的好友申请发送成功</string>
    <string name="friendManagementActivity_toast_text_reduseAddAsFriend">对方不允许加为好友</string>
    <string name="friendManagementActivity_toast_text_applySentFail">您的好友申请发送失败</string>
    <string name="authenticationActivity_titlebar_back">@string/common_back</string>
    <string name="authenticationActivity_titlebar_back1">@string/common_personal_data</string>
    <string name="authenticationActivity_titlebar_title">拒绝理由</string>
    <string name="authenticationActivity_titlebar_title1">身份验证</string>
    <string name="authenticationActivity_objection_hint">请输入拒绝理由</string>
    <string name="authenticationActivity_authentication_info_hint">请输入验证信息</string>
    <string name="conference_create_title">创建会议</string>
    <string name="conference_invition_button_text">发出邀请</string>
    <string name="conference_create_conf_name">会议名称</string>
    <string name="conference_create_conf_start_time">开始时间</string>
    <string name="conference_create_conf_end_time">结束时间</string>
    <string name="conference_create_confirm">确定</string>
    <string name="conference_create_cancel">返回</string>
    <string name="conference_create_mute">会场静音</string>
    <string name="conference_create_invite">邀请其他人</string>
    <string name="error_conf_title_required">会议名称不能为空!</string>
    <string name="error_conf_start_time_required">会议开始时间不能为空!</string>
    <string name="error_conf_end_time_required">会议结束时间不能为空!</string>
    <string name="error_create_conference_failed_from_server_side">创建会议失败</string>
    <string name="error_time_out_create_conference_failed">创建会议超时</string>
    <string name="error_create_conference_failed_no_exist">该会议已不存在！</string>
    <string name="error_create_conference_failed_no_network">当前网络不可用，请检查网络连接</string>
    <string name="error_conf_start_time_format_failed">会议开始时间格式错误: yyyy-MM-dd HH:mm</string>
    <string name="error_conf_do_not_permit_create_piror_conf">不允许创建历史会议</string>
    <string name="notification_watiing_process">正在处理请稍后 &#8230;</string>
    <string name="error_create_discussion_board_failed_no_network">当前网络不可用，请检查网络连接</string>
    <string name="confs_title">我 的 信 息</string>
    <string name="error_request_enter_conference_time_out">登入超时</string>
    <string name="error_request_enter_conference_no_resource">资源不足，请联系管理员</string>
    <string name="error_request_enter_conference_not_exist">无法登录，会议不存在</string>
    <string name="requesting_delete_conference">通知</string>
    <string name="requesting_enter_conference">正在登入.....</string>
    <string name="error_can_not_connect_server">无法连接到服务器</string>
    <string name="conversations_delete_conf">删除该会议</string>
    <string name="conversations_delete_conversaion">删除该会话</string>
    <string name="conversations_kick_notification">已经被主席请出会议室</string>
    <string name="confs_is_deleted_notification">此会议已被删除</string>
    <string name="confs_public_chatting">公共聊天</string>
    <string name="confs_doc">文档共享</string>
    <string name="confs_attendee_title">参会人数</string>
    <string name="confs_camear_quanlity">视频质量</string>
    <string name="confs_camear_quanlity_high">高</string>
    <string name="confs_camear_quanlity_middle">中</string>
    <string name="confs_camear_quanlity_low">低</string>
    <string name="conf_notification_joined_meeting">进入会议室</string>
    <string name="conf_notification_quited_meeting">离开会议室</string>
    <string name="error_exceed_support_video_count">最多只支持4路视频</string>
    <string name="error_no_second_camera">用户没有另一个摄像头</string>
    <string name="error_no_permission_to_invitation">主席禁用了邀请功能</string>
    <string name="warning_under_sync">主席正在同步，无法切换文档</string>
    <string name="warning_no_attendee_selected">您未选择任何联系人</string>
    <string name="warning_downloading_doc">正在下载文档&#8230;</string>
    <string name="error_open_device_disable">设备已被禁用，无法打开</string>
    <string name="confs_user_video_device_item">视频</string>
    <string name="confs_title_button_logout_name">退出会议</string>
    <string name="confs_title_button_request_host_name">申请主讲</string>
    <string name="confs_title_button_release_host_name">释放主讲</string>
    <string name="confs_toast_get_control_permission">您现在已成为主讲人</string>
    <string name="confs_toast_cancel_control_permission">您的主讲申请已被取消</string>
    <string name="confs_toast_reject_control_permission">您的主讲申请已被取消</string>
    <string name="confs_toast_release_control_permission">您的主讲权已被释放</string>
    <string name="conference_request_host_list_item_content">申请主讲</string>
    <string name="conference_request_host_list_item_button_name_accept">同意</string>
    <string name="conference_request_host_list_item_button_name_reject">拒绝</string>
    <string name="conference_chair_man_control_window_item_message">会议消息</string>
    <string name="contact_message_pic_text">图片</string>
    <string name="contact_message_send_button">发  送</string>
    <string name="contact_message_copy_message">已复制</string>
    <string name="contact_message_pop_up_item_copy">复制</string>
    <string name="contact_message_pop_up_item_del">删除</string>
    <string name="contact_message_pop_up_item_contact_management">分组管理</string>
    <string name="contact_message_pop_up_item_crowd_management">群组管理</string>
    <string name="contact_message_pop_up_item_resend">重新发送</string>
    <string name="contact_message_pop_up_item_redownload">重新下载</string>
    <string name="error_contact_messag_invalid_user_id">错误的用户id</string>
    <string name="error_contact_messag_invalid_image_path">不可用的图片地址</string>
    <string name="error_contact_messag_time_too_short">录制时间太短</string>
    <string name="error_contact_message_face_too_much">单条消息表情不能超过10张</string>
    <string name="contact_message_button_up_to_cancel">松开手指， 取消发送</string>
    <string name="contact_message_button_up_to_send">松开， 结束</string>
    <string name="contact_message_button_send_audio_msg">按住  留言</string>
    <string name="contact_message_voice_dialog_text">手指上滑， 取消发送</string>
    <string name="contact_message_voice_dialog_cancel_text">松开手指， 取消发送</string>
    <string name="contact_message_voice_dialog_waring_text">录制时间太短</string>
    <string name="contact_message_message_cancelled">已取消发送</string>
    <string name="contact_message_file_item_downloading">下载中</string>
    <string name="contact_message_file_item_pause">暂停中</string>
    <string name="contact_message_file_item_uploading">上传中</string>
    <string name="contact_message_file_item_sending">发送中</string>
    <string name="contact_message_file_item_upload_failed">上传失败</string>
    <string name="contact_message_file_item_download_failed">下载失败</string>
    <string name="contact_message_file_item_uploaded">已上传</string>
    <string name="contact_message_file_item_downloaded">已下载</string>
    <string name="contact_message_file_item_miss_download">未下载</string>
    <string name="contact_message_file_item_sent">已发送</string>
    <string name="contact_message_file_item_sent_failed">发送失败</string>
    <string name="contact_message_no_network_notification">网络连接不可用，请稍候再试</string>
    <string name="contact_message_tips_rest_seconds">你还可以说[]秒</string>
    <string name="contact_message_audio_call">语音</string>
    <string name="contact_message_video_call">视频</string>
    <string name="contact_message_create_metting">建会</string>
    <string name="contact_message_send_file">文件</string>
    <string name="contact_message_send_image">图片</string>
    <string name="contact_message_expression">表情</string>
    <string name="contact_message_auto_reply">[自动回复]</string>
    <string name="contact_message_auto_voice">[语音] </string>
    <string name="contact_message_auto_video">[视频] </string>
    <string name="activiy_contact_group_update_title">分组管理</string>
    <string name="activiy_contact_group_title">移至分组</string>
    <string name="activiy_contact_group_title_button_done">完成</string>
    <string name="activiy_contact_group_item_button_delete">删除</string>
    <string name="activiy_contact_group_button_confirm">确定</string>
    <string name="activiy_contact_group_add_hint">请输入分组名</string>
    <string name="activiy_contact_group_button_cancel">取消</string>
    <string name="activiy_contact_group_dialog_title_create">添加分组</string>
    <string name="activiy_contact_group_name_content">请输入分组名称</string>
    <string name="activiy_contact_group_dialog_title_update">编辑分组</string>
    <string name="activiy_contact_group_dialog_group_name_required">分组名不能为空，请重新输入</string>
    <string name="activiy_contact_update_group_error_msg_in_progess">正在更新请稍后...</string>
    <string name="contacts_default_group_name">我的好友</string>
    <string name="conversation_popup_menu_video_call_button">创建会议</string>
    <string name="conversation_popup_menu_call_button">拨打电话</string>
    <string name="conversation_popup_menu_sms_call_button">发送短信</string>
    <string name="conversation_popup_menu_email_button">发送邮件</string>
    <string name="conversation_popup_menu_files_button">文件柜</string>
    <string name="conversation_quit_dialog_video_text">确定退出视频通话吗?</string>
    <string name="conversation_quit_dialog_confirm_text">确定</string>
    <string name="conversation_quit_dialog_cancel_text">取消</string>
    <string name="login_title">V2 BizCom</string>
    <string name="login_title_2">Business Communication</string>
    <string name="login_title_copyright">版权所有&#0169;北京威速科技有限公司 保留所有权</string>
    <string name="in_meeting_quit_notification">提  示</string>
    <string name="in_meeting_quit_quit_button">退出</string>
    <string name="in_meeting_quit_cancel_button">取消</string>
    <string name="in_meeting_quit_text">此操作将退出会议，是否继续?</string>
    <string name="crowd_files_return_button">返回</string>
    <string name="crowd_files_title">群文件</string>
    <string name="crowd_files_title_upload">上传</string>
</resources>