<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/contact_user_detail_call_dialog_bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/imq_l3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/fragment_conversation_quit_dialog_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:padding="20dp"
            android:text="@string/conversation_quit_dialog_video_text"
            android:textColor="#000000"
            android:textSize="18sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#c0c0c0"
        android:orientation="vertical" >
    </LinearLayout>

    <LinearLayout
        android:id="@+id/imq_l5"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <Button
            android:id="@+id/fragment_conversation_IMWCancelButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:background="@null"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:text="@string/conversation_quit_dialog_cancel_text"
            android:textColor="@color/button_text_color_blue"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#c0c0c0"
            android:orientation="vertical" >
        </LinearLayout>

        <Button
            android:id="@+id/fragment_conversation_IMWQuitButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:background="@null"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:text="@string/conversation_quit_dialog_confirm_text"
            android:textColor="@color/button_text_color_blue"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>