<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_corners_of_in_meeting_quit_window_outer_box"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/in_meeting_quit_window_inner_bg"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/imq_l1"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/in_meeting_quit_window_title_bg"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/in_meeting_quit_notification"
                android:textColor="#000000"
                android:textSize="22sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/imq_l2"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@+id/imq_l1"
            android:background="@color/in_meeting_quit_window_separation"
            android:orientation="vertical" >
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/imq_l3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imq_l2" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="15dp"
                android:paddingBottom="10dp"
                android:text="@string/in_meeting_quit_text"
                android:textSize="16sp"
                android:textColor="#000000" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/imq_l4"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@+id/imq_l3"
            android:background="@color/in_meeting_quit_window_separation"
            android:orientation="vertical" >
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/imq_l5"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@+id/imq_l4" >

            <Button
                android:id="@+id/IMWQuitButton"
                android:layout_width="90dp"
                android:layout_height="35dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="40dp"
                android:background="@drawable/button_bg"
                android:text="@string/in_meeting_quit_quit_button"
                android:textColor="@color/button_text_color" />

            <Button
                android:id="@+id/IMWCancelButton"
                android:layout_width="90dp"
                android:layout_height="35dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="40dp"
                android:background="@drawable/button_bg"
                android:text="@string/in_meeting_quit_cancel_button"
                android:textColor="@color/button_text_color" />
        </RelativeLayout>
    </RelativeLayout>

</LinearLayout>