<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_corners_of_in_meeting_quit_window_outer_box"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/imq_l1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/contacts_group_title"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/activiy_contact_group_dialog_title_create"
                android:textColor="#000000"
                android:textSize="20sp" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/imq_l3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imq_l1"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/rounded_corners_create_conf_box_bg"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:padding="1dp" >

            <EditText
                android:id="@+id/contacts_group_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@null"
                android:ems="10"
                android:hint="@string/activiy_contact_group_add_hint"
                android:inputType="text"
                android:maxLength="30"
                android:paddingBottom="5dp"
                android:paddingTop="5dp" >
            </EditText>
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/imq_l5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imq_l3"
            android:layout_centerHorizontal="true" >

            <Button
                android:id="@+id/contacts_group_confirm_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:background="@drawable/button_bg"
                android:paddingBottom="5dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="5dp"
                android:text="@string/activiy_contact_group_button_confirm"
                android:textColor="@color/button_text_color"
                android:textSize="20sp" />

            <Button
                android:id="@+id/contacts_group_cancel_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_weight=".5"
                android:background="@drawable/button_bg"
                android:paddingBottom="5dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="5dp"
                android:text="@string/activiy_contact_group_button_cancel"
                android:textColor="@color/button_text_color"
                android:textSize="20sp" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>