<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.conference.GroupCreateActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/RelativeLayout1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/confs_title_bg"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/crowd_files_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/crowd_files_title"
                android:textColor="@color/activiy_contact_detail_title_color"
                android:textSize="@dimen/common_item_text_size" />

            <TextView
                android:id="@+id/crowd_files_uploaded_file_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:text="@string/crowd_files_title_upload"
                android:textColor="@color/conf_create_button_color" />

            <TextView
                android:id="@+id/crowd_members_return_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                 android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:text="@string/crowd_files_return_button"
                android:textColor="@color/conf_create_button_color" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#cdcdcf"
            android:orientation="vertical" >
        </LinearLayout>

        <LinearLayout
            android:id="@+id/group_create_error_notification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFDEAD"
            android:visibility="gone" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="4dp"
                android:gravity="center_horizontal"
                android:text="@string/error_create_conference_failed_from_server_side"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#f2f2f2" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#cdcdcf"
            android:orientation="vertical" >

            <ListView
                android:id="@+id/crowd_files_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#ffffff"
                android:divider="@null"
                android:focusable="false" >
            </ListView>
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>